# agentops

./: .env.example  .gitignore  AGENTOPS_EXECUTION_PLAN.md  AGENTOPS_PLAN.md  DEMO_SCRIPT.md  REACT_MIGRATION_PLAN.md  README.md  pyproject.toml  run_demo.sh
backend/: api.py  event_bus.py  run.sh  stdout_capture.py
dashboard/: run_dashboard.sh  streamlit_app.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: ActionsTab.jsx  AlertsTab.jsx  Collapsible.jsx  ConfidenceBadge.jsx  CrewTab.jsx  DataQualityTab.jsx  InvestigateTab.jsx  Layout.jsx  Markdown.jsx  MetricCard.jsx  MetricsTab.jsx  SeverityBadge.jsx  Sidebar.jsx  Sparkline.jsx  Terminal.jsx  ThresholdBar.jsx  TrendsTab.jsx
incidents/: inc_2026_0115_v14_drift.md  inc_2026_0120_null_spike.md  inc_2026_0203_latency.md  inc_2026_0210_accuracy_drop.md  inc_2026_0215_false_positive.md  inc_2026_0218_schema_change.md  inc_2026_0222_anomaly_spike.md  inc_2026_0225_retraining_fail.md
runbooks/: data_quality.md  incident_response.md  latency_spike.md  model_drift.md  retraining.md  rollback.md
scripts/: ingest_docs.py  reset_demo.sh
seed/: reset_demo.py  setup_snowflake.py
src/: config.py  orchestrator.py
src/crew/: __init__.py  agents.py  crew.py  tasks.py
src/integrations/: __init__.py  composio_client.py  mlmonitoring_client.py  rag_client.py  snowflake_client.py
src/models/: __init__.py  alerts.py  approval.py
src/tools/: __init__.py  composio_tools.py  mlops_tools.py  rag_tools.py  snowflake_tools.py
(+2 files in other folders)
